--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test": "export PLAYWRIGHT=True && pnpm exec playwright test"
   },
   "dependencies": {
+    "@stream-md/react": "workspace:*",
     "@ai-sdk/deepseek": "^1.0.27",
     "@ai-sdk/gateway": "^1.0.15",
     "@ai-sdk/google": "^2.0.29",
