--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -21,5 +21,5 @@ jobs:
           cache: "pnpm"
       - name: Install dependencies
         run: pnpm install
-      - name: Run lint
-        run: pnpm lint
+      - name: Run streaming-markdown lint
+        run: pnpm --filter @stream-md/react lint
