--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbo -p 4000",
-    "build": "tsx lib/db/migrate && next build",
+    "build": "pnpm --filter @stream-md/react build && tsx lib/db/migrate && next build",
     "start": "next start",
     "lint": "npx ultracite@latest check",
     "format": "npx ultracite@latest fix",
