--- a/packages/streaming-markdown/package.json
+++ b/packages/streaming-markdown/package.json
@@ -39,6 +39,7 @@
     "react-markdown": "^9.0.1",
     "remark-gfm": "^4.0.0",
     "remark-parse": "^11.0.0",
+    "shiki": "^3.12.2",
     "unified": "^11.0.0",
     "unist-util-visit": "^5.0.0"
   },
