chore: rename package from @stream-md/react to streaming-markdown-react
- Update workspace dependency reference in root package.json
- Update import in components/elements/response.tsx
- Update transpilePackages in next.config.ts
- Update pnpm filter in GitHub Actions workflow
- Update pnpm-lock.yaml with correct package name and marked dependency

This fixes the "ERR_PNPM_WORKSPACE_PKG_NOT_FOUND" error and ensures
consistency across the workspace.

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -22,4 +22,4 @@ jobs:
       - name: Install dependencies
         run: pnpm install
       - name: Run streaming-markdown lint
-        run: pnpm --filter @stream-md/react lint
+        run: pnpm --filter streaming-markdown-react lint
