--- a/packages/streaming-markdown/package.json
+++ b/packages/streaming-markdown/package.json
@@ -48,8 +48,10 @@
   },
   "devDependencies": {
     "@testing-library/react": "^14.3.1",
+    "@types/mdast": "^4.0.4",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
+    "@types/unist": "^3.0.3",
     "@vitejs/plugin-react": "^5.1.0",
     "@vitest/coverage-v8": "^1.6.1",
     "@vitest/ui": "^1.6.1",
